syntax = "proto3";

package vertexai.tile.metadata.proto;

import "tile/proto/shape.proto";

// Describes metadata for a Tile model.  This is attached to .tile files
// as a JSON-encoded internal file named "metadata".
message Metadata {
  map<string, tile.proto.TensorShape> inputs = 1;

  repeated TestCase testcases = 2;
}

message TestCase {
  // Standard input datasets.  This should be truncated or repeated as needed
  // in order to match the desired batch size, assuming that the high dimension
  // of each input is the batch size.
  map<string, Tensor> inputs = 1;

  // Golden outputs for particular batch sizes.
  map<uint32, Tensor> output = 2;
}

message Tensor {
  // The actual tensor data shape.
  tile.proto.TensorShape shape = 1;

  // For an input, the data to supply for inference;
  // for an output, the expected output data.

  string filename = 2;  // Represents an external file.
}
